force-app/main/default/objects/ssot__ClaimItemParticipant__dlm/fields/ssot__ClaimParticipantId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ClaimParticipantId__c</fullName>
    <label>Claim Participant</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ClaimParticipantId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>