force-app/main/default/objects/ssot__ClaimItemParticipant__dlm/fields/ssot__IsResponsible__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsResponsible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resonsible</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsResponsible</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>